# sdk10-cs

./: .editorconfig  .pre-commit-config.yaml  license  makefile  ptconfig.py  readme.md  readme.rst
contrib/: .gitignore.yaml
contrib/binaries/: cli_programmer.yaml  mkimage.yaml
contrib/projects/dk_apps/ble_profiles/ams/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/ancs/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/blp_sensor/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/bms/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/cscp_collector/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/ctes/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/hogp_device/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/hogp_host/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/hrp_collector/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/hrp_sensor/: CMakeLists.txt
contrib/projects/dk_apps/ble_profiles/wsp_weightscale/: CMakeLists.txt
contrib/projects/dk_apps/demos/audio_demo/: CMakeLists.txt
contrib/projects/dk_apps/demos/ble_cli/: CMakeLists.txt
contrib/projects/dk_apps/demos/pxp_reporter/: CMakeLists.txt
contrib/projects/dk_apps/features/asymmetric_suota/: CMakeLists.txt
contrib/projects/dk_apps/features/ble_peripheral/: CMakeLists.txt
contrib/projects/dk_apps/reference_designs/st_fw/: CMakeLists.txt
contrib/sdk/: CMakeLists.txt
contrib/sdk/bsp/: CMakeLists.txt
contrib/sdk/bsp/ldscripts/ble_projects/: sections_da1459x.ld.h.yaml
contrib/sdk/bsp/memory/src/: CMakeLists.txt
contrib/sdk/bsp/peripherals/src/: CMakeLists.txt
contrib/sdk/bsp/snc/src/: CMakeLists.txt
contrib/sdk/bsp/startup/: CMakeLists.txt
contrib/sdk/bsp/startup/DA1459x/: init_da1459x.c.yaml
contrib/sdk/bsp/startup/DA1459x/GCC/: exception_handlers.S.yaml  startup_da1459x.S.yaml
contrib/sdk/bsp/startup/DA1469x/: CMakeLists.txt
contrib/sdk/bsp/startup/DA1469x/GCC/: CMakeLists.txt
contrib/sdk/bsp/system/sys_man/: CMakeLists.txt
contrib/sdk/bsp/util/src/: CMakeLists.txt
contrib/sdk/cmake/: devices.cmake  devices.cmake#jinja  interface.cmake  reflect.txt.h  sdk10-config-version.cmake  sdk10-config.cmake  sdk10-export.cmake  sdk10-module.cmake  sdk10-version.cmake  sdk10-version.cmake#jinja  toolchain.cmake
contrib/sdk/free_rtos/portable/GCC/: CMakeLists.txt
contrib/sdk/free_rtos/portable/GCC/DA1469x/: CMakeLists.txt
contrib/sdk/free_rtos/portable/MemMang/: CMakeLists.txt
contrib/sdk/interfaces/: CMakeLists.txt
contrib/sdk/interfaces/ble/: CMakeLists.txt
contrib/sdk/interfaces/ble/binaries/: CMakeLists.txt
contrib/sdk/interfaces/ble/binaries/DA14592-Release/: CMakeLists.txt
contrib/sdk/interfaces/ble/binaries/DA14594-Release/: CMakeLists.txt
contrib/sdk/interfaces/ble/binaries/DA1459x-Release/: CMakeLists.txt
contrib/sdk/interfaces/ble/binaries/DA1469x-Release/: CMakeLists.txt
contrib/sdk/interfaces/ble/clients/src/: CMakeLists.txt
contrib/sdk/interfaces/ble/services/src/: CMakeLists.txt  CMakeLists.txt#jinja
contrib/sdk/interfaces/ble/stack/: CMakeLists.txt
contrib/sdk/interfaces/ble/stack/da14590/: CMakeLists.txt
contrib/sdk/interfaces/ble/stack/da14594/: CMakeLists.txt
contrib/sdk/interfaces/ble/stack/da14690/: CMakeLists.txt
contrib/sdk/interfaces/ble/stack/da14690/src/: CMakeLists.txt
contrib/sdk/middleware/: CMakeLists.txt  CMakeLists.txt#jinja
contrib/sdk/middleware/adapters/src/: CMakeLists.txt  ad_crypto.c#cocci#jinja  ad_crypto.c.yaml
contrib/sdk/middleware/asymmetric_suota/: CMakeLists.txt  asym_suota_utils.c.yaml
contrib/sdk/middleware/cli/src/: CMakeLists.txt
contrib/sdk/middleware/console/: CMakeLists.txt
contrib/sdk/middleware/console/src/: CMakeLists.txt
contrib/sdk/middleware/dgtl/src/: CMakeLists.txt
contrib/sdk/middleware/haptics/: CMakeLists.txt
contrib/sdk/middleware/haptics/src/: CMakeLists.txt
contrib/sdk/middleware/hw_tools/src/: CMakeLists.txt
contrib/sdk/middleware/intrinsic/: CMakeLists.txt
contrib/sdk/middleware/intrinsic/lib/: CMakeLists.txt
contrib/sdk/middleware/osal/: CMakeLists.txt
contrib/sdk/middleware/segger_tools/: CMakeLists.txt
contrib/sdk/middleware/segger_tools/Config/: CMakeLists.txt  CMakeLists.txt#jinja
contrib/sdk/middleware/segger_tools/OS/: CMakeLists.txt
contrib/sdk/middleware/segger_tools/SEGGER/: CMakeLists.txt  CMakeLists.txt#jinja
contrib/utilities/python_scripts/api/: jlink.py#exec  jlink.py.yaml  mkimage.py.yaml  mkimage_nonce.py
contrib/utilities/python_scripts/cmake/: reflect-filter.py
contrib/utilities/python_scripts/contrib/: gen_flash_config.py  reflect.py
doc/: cmake.rst  kll.rst
scripts/: mkpatch.py
sdk/: CMakeLists.txt
sdk/bsp/: CMakeLists.txt
sdk/bsp/memory/src/: CMakeLists.txt
sdk/bsp/peripherals/src/: CMakeLists.txt
sdk/bsp/startup/DA1459x/: CMakeLists.txt
sdk/bsp/startup/DA1459x/GCC/: CMakeLists.txt
sdk/bsp/system/: CMakeLists.txt
sdk/bsp/system/sys_man/: CMakeLists.txt
sdk/cmake/: SDK10Config.cmake  SDK10ConfigVersion.cmake  devices.cmake  devices.cmake#jinja  interface.cmake  sdk10-config-version.cmake  sdk10-config.cmake  sdk10-export.cmake  sdk10-module.cmake  sdk10-version.cmake#jinja  sdk10-version.cmake.in  sdk10_export.cmake  sdk10_module.cmake  sdk10_version.cmake.in  toolchain.cmake
sdk/free_rtos/: CMakeLists.txt
sdk/free_rtos/portable/: CMakeLists.txt
sdk/free_rtos/portable/Common/: CMakeLists.txt
sdk/free_rtos/portable/GCC/DA1459x/: CMakeLists.txt
sdk/interfaces/ble/: CMakeLists.txt
sdk/interfaces/ble/adapter/src/: CMakeLists.txt
sdk/interfaces/ble/api/src/: CMakeLists.txt
sdk/interfaces/ble/clients/: CMakeLists.txt
sdk/interfaces/ble/manager/src/: CMakeLists.txt
sdk/interfaces/ble/stack/: CMakeLists.txt
sdk/interfaces/ble/stack/da14594/src/: CMakeLists.txt
sdk/middleware/: CMakeLists.txt
sdk/middleware/adapters/: CMakeLists.txt
sdk/middleware/adapters/src/: CMakeLists.txt  ad_crypto.c#cocci#jinja
sdk/middleware/intrinsic/: CMakeLists.txt
sdk/middleware/osal/: CMakeLists.txt
test/: cases.yaml  makefile
(+8 files in other folders)
